--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-torch==2.4.0
-torchvision==0.19.0
-scikit-image==0.24.0
-matplotlib==3.9.2
-numpy==2.0.2
-piexif==1.1.3
-black==24.10.0
+torch
+torchvision
+scikit-image
+matplotlib
+numpy
+piexif
+black
